# picovdb

./: LICENSE  README.md  dev-requirements.txt  pyproject.toml
bench/: Makefile  README.md  batch_queries.py  hf_query.py  hf_upserts.py  local_embedding_index.py  local_embedding_query.py  many_upserts.py  numpy_query_profiler.py  queries.py  quiries.py  set_path.py  st_embedding.py  upserts.py
picovdb/: __init__.py  pico_vdb.py
tests/: __init__.py  fixtures.py  test_api_ergonomics.py  test_memmap_capacity.py  test_more.py  test_pico_vdb.py  test_task10_apply_rwlocks.py  test_task11_snapshot_reads.py  test_task12_faiss_dirty_flag.py  test_task13_faiss_idmap_active_only.py  test_task14_faiss_vs_numpy_results.py  test_task15_faiss_persist_load_safely.py  test_task16_faiss_tunables.py  test_task17_float32_contiguity.py  test_task18_prefilter.py  test_task19_adaptive_buffer.py  test_task1_active_indices.py  test_task20_argsort_vs_argpartition.py  test_task2_numpy_query_active_indices.py  test_task31_hnsw_params.py  test_task32_get_consolidation.py  test_task34_prefilter.py  test_task36_faiss_incremental_threshold.py  test_task3_input_validation.py  test_task48_tuning_knobs.py  test_task4_logging.py  test_task5_zero_vector_normalization.py  test_task6_getters_include_vector.py  test_task7_get_all_include_deleted.py  test_task8_count_and_size.py  test_task9_rwlock.py  test_timing_logs.py
